[package]
name = "sso"
version = "0.3.5"
edition = "2021"

license = "MIT OR Apache-2.0"
repository = "https://github.com/bwoods/immutable-sso"
description = "A (smaller) Small String Optimization implementation for immutable strings."
keywords = [ "small", "string", "stack" ]
categories = [ "data-structures" ]
readme = "README.md"

[dependencies]
# alloc

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
